<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_activity_part"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/string_activity_title"/>
        <item android:id="@+id/nav_service_part"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/string_service_title"/>
        <item android:id="@+id/nav_broadcast_part"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/string_broadcast_title"/>
        <item android:id="@+id/nav_content_provider_part"
            android:icon="@drawable/ic_launcher_background"
            android:title="@string/string_content_provider_title"/>

    </group>

</menu>